Init edit report

--- a/Report/main.tex
+++ b/Report/main.tex
@@ -35,14 +35,12 @@ headsepline,
 	bottom=1.5cm,
 	}
 
-\thesistitle{1ère revue de projet \\ Cahier des charges}
+\thesistitle{Rapport de projet C++ \\ Station météo}
 \supervisor {}
 \examiner{}
 \degree{\href{http://www.estei.fr/filiere/informatique-systemes-embarques}{MASTER Informatique embarqué}}
 \author{
 \href{https://github.com/ThomasAbg}{Thomas ABGRALL}\\
-\href{https://github.com/calliauc}{Clément CALLIAU}\\
-\href{https://github.com/Ghishohir}{Jérôme MAURY}\\
 \href{https://github.com/eric33440}{Eric REBILLON}}
 
 \addresses{}
@@ -91,7 +89,7 @@ showtabs,
 {\href{https://ynov-bordeaux.com/}{\includegraphics[width=0.5\linewidth]{\figures/logo_ynov_campus_rvb.png}}}
 \vspace*{.06\textheight}
 \vspace{1.5cm}\\
-\textsc{\Large Projet }\\[0.5cm]
+\textsc{\Large French student report}\\[0.5cm]
 
 \HRule \\[0.4cm]
 {\huge \bfseries \ttitle\par}\vspace{0.4cm}
@@ -124,18 +122,11 @@ showtabs,
 
 \part{Partie de groupe}
 \include{Chapters/Chapter1}
-%\part{Thomas ABGRALL}
+\part{Thomas ABGRALL}
 \include{Chapters/Abgrall/Chapter1}
-%\include{Chapters/Chapter2}
-%\part{Clément CALLIAU}
-%\include{Chapters/Calliau/Chapter1}
-%\include{Chapters/Calliau/Chapter2}
-%\part{Jerome MAURY}
-%\include{Chapters/Maury/Chapter1}
-%\include{Chapters/Calliau/Chapter1}
-%\part{Eric REBILLON}
-%\include{Chapters/Rebillon/Chapter1}
-%\include{Chapters/Calliau/Chapter1}
+\part{Eric Rebillon}
+\include{Chapters/Rebillon/Chapter1}
+
 
 \appendix
 
